--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <section class="hero">
             <div data-aos="fade-up" data-aos-duration="1000" class="hero-card">
-                <img src="images/IMG-20240617-WA0048.jpg" alt="" data-aos="zoom-in" data-aos-duration="1500">
+                <img src="IMG-20240617-WA0048.jpg" alt="" data-aos="zoom-in" data-aos-duration="1500">
                 <h3 data-aos="zoom-in" data-aos-duration="2000">Premium materials and classic designs perfected with bespoke craftsmanship</h3>
             </div>
         </section>
@@ -39,10 +39,10 @@
             </p>
             <button class="view-product-button" data-aos="zoom-in" data-aos-duration="2500">Know More</button>
         </div>
-        <img data-aos="flip-left" data-aos-duration="2000" class="product-image" src="images/IMG-20240617-WA0052.jpg" alt="">
+        <img data-aos="flip-left" data-aos-duration="2000" class="product-image" src="IMG-20240617-WA0052.jpg" alt="">
     </section>
     <section data-aos="fade-up" data-aos-duration="2000" class="product">
-        <img data-aos="flip-left" data-aos-duration="2000" class="product-image" src="images/470477_bespoke mens leather shoes_ _xl-1024-v1-0.png" alt="">
+        <img data-aos="flip-left" data-aos-duration="2000" class="product-image" src="470477_bespoke mens leather shoes_ _xl-1024-v1-0.png" alt="">
         <div class="product-info">
             <h1 class="product-name" data-aos="zoom-in" data-aos-duration="1500">LEATHER WORK</h1>
             <p class="product-description" data-aos="zoom-in" data-aos-duration="2000">
@@ -58,7 +58,7 @@
                 Unveil timeless luxury with our jewelry collection. Crafted with precision, this exquisite accessory combines sophistication with practicality. Elevate your style and make a statement of refined elegance wherever you go.</p>
             <button class="view-product-button" data-aos="zoom-in" data-aos-duration="2500">View Products</button>
         </div>
-        <img data-aos="flip-left" data-aos-duration="2000" class="product-image" src="images/IMG-20240617-WA0054.jpg" alt="">
+        <img data-aos="flip-left" data-aos-duration="2000" class="product-image" src="IMG-20240617-WA0054.jpg" alt="">
     </section>
     <section class="boast">
         <div class="boast-text">
@@ -66,9 +66,9 @@
             <p data-aos="zoom-in" data-aos-duration="1500" >We have perfected our craft, and this transcends into our timeless pieces that have been produced over the decade. Our works speak for themselves.</p>
         </div>
         <div class="boast-images">
-            <img data-aos="zoom-in" data-aos-duration="1000" src="images/298368_a black man wearing a bespoke suit in a lounge_ _xl-1024-v1-0.png" alt="">
-            <img data-aos="zoom-in" data-aos-duration="1500" src="images/242589_a black man in bespoke wedding suit_ _xl-1024-v1-0.png" alt="">
-            <img data-aos="zoom-in" data-aos-duration="2000" src="images/298369_a black man wearing a bespoke suit in a lounge_ _xl-1024-v1-0.png" alt="">
+            <img data-aos="zoom-in" data-aos-duration="1000" src="298368_a black man wearing a bespoke suit in a lounge_ _xl-1024-v1-0.png" alt="">
+            <img data-aos="zoom-in" data-aos-duration="1500" src="242589_a black man in bespoke wedding suit_ _xl-1024-v1-0.png" alt="">
+            <img data-aos="zoom-in" data-aos-duration="2000" src="298369_a black man wearing a bespoke suit in a lounge_ _xl-1024-v1-0.png" alt="">
         </div>
     </section>
     <footer  data-aos="fade-up" data-aos-duration="1000">
